# ibm_ai_engineering_certification

./: pyproject.toml
Course 1 - Machine Learning with Python/: 1. Simple-Linear-Regression-v1.ipynb  10. K-Means-Customer-Seg-v1.ipynb  12. PCA-v1.ipynb  13. tSNE-UMAP-v1.ipynb  14. Evaluating Classification Models-v1.ipynb  15. Evaluating-random-forest-v1.ipynb  16. Evaluating-k-means-clustering-v1.ipynb  17. Regularization-in-LinearRegression-v1.ipynb  18. ML-Pipelines-and-GridSearchCV-v1.ipynb  19. Practice Project-v1.ipynb  2. Mulitple-Linear-Regression-v1.ipynb  3. Logistic-Regression-v1.ipynb  4. Multi-class-Classification-V2.ipynb  5. Decision-tree-classifier-drug-pred-v1.ipynb  6. Regression-Trees-Taxi-Tip-v1.ipynb  7. decision-tree-svm-ccFraud-v1.ipynb  8. KNN-lab-v1.ipynb  9. Random- Forests -XGBoost-v1.ipynb
Course 2 - Introduction to Deep Learning & Neural Networks with Keras/: 1. Regression Models with keras.ipynb  2. Convolutional Neural Networks.ipynb  DL0101EN-1-1-Forward-Propgation-py-v1.0__1__.ipynb  DL0101EN-3-2-Classification-with-Keras-py-v1.0__1_.ipynb  DL0101EN-4-1-Convolutional-Neural-Networks-with-Keras-py-v1.0__1_.ipynb
Course 3 - Deep Learning with Keras and Tensorflow/: 1. M01L01-Lab- Implementing the Functional API in Keras-v1.ipynb  10. GANs - Generative Adversarial Networks.ipynb  10.1. Tensorflow for unsupervised Learning.ipynb  10.2. M04L02-Lab-Develop GANs using Keras-v1.ipynb  11. Advanced Keras Techniques.ipynb  2. M01L02-Lab-Creating-Custom-Layers-and-Models-v1.ipynb  3. M2L1-Lab- Advanced Data Augmentation with Keras-v1.ipynb  (+18 more)
(+6 files in other folders)
