[project]
name = "imb-ai-engineering"
version = "0.1.0"
description = ""
authors = [
    {name = "animasouza",email = "animasouza@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "pydot (>=4.0.1,<5.0.0)",
    "graphviz (>=0.21,<0.22)",
    "scipy (>=1.15.3,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

